--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <pre class="idl">
       partial interface HTMLMediaElement {
         [SecureContext] readonly attribute DOMString sinkId;
-        [SecureContext] Promise&lt;void&gt; setSinkId (DOMString sinkId);
+        [SecureContext] Promise&lt;undefined&gt; setSinkId (DOMString sinkId);
       };
       </pre>
       <section>
