--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
       </section>
       <section>
         <h4>AudioOutputOptions dictionary</h4>
-        <p>This dictionary describe the options that can be used to obtain
+        <p>This dictionary describes the options that can be used to obtain
         access to an audio output device.</p>
         <div>
           <pre class="idl"
